@@ -1,3 +1,6 @@
+2010-02-27 Harri Pitkänen <hatapitk@iki.fi>
+	* Implement SuggestionGeneratorFactory.
+
 2010-02-20 Harri Pitkänen <hatapitk@iki.fi>
 	* Replace uses of iswlower, iswdigit and iswspace with locale independent implementation.
 	* Remove ENTER_V and EXIT_V macros, these should no longer be needed.
